changed links since no folders, some media

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 body {
-    background:url(../images/papyrus.png);
+    background:url(../papyrus.png);
     border-bottom-color: #4aaaa5;
     border-width: 0px 0px 100px 0px;
 
@@ -220,3 +220,50 @@ form{
 .clearfloat {
     clear: both;
 }
+
+@media screen and (max-width: 980px) {
+    body {
+    background-color: lightgreen;}
+
+    .headerwrapper1 {
+        header: fixed;
+    }
+    .about
+    .portfolio
+    .contact
+    .emptybox1
+    .emptybox2
+    .namebox
+    .emptybox {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none; 
+    }
+
+  }
+  /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
+@media screen and (max-width: 640px) {
+    .topnav a {
+      float: none;
+      width: 100%;
+          /* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  /* Style the topnav links */
+  .headerwrapper1 {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }  
+    }
+    }
+  }
