updated media queries for smallest screen

--- a/css/style.css
+++ b/css/style.css
@@ -238,8 +238,7 @@ form{
       background-color: lightgreen;
     }
     .headerwrapper1 {
-        position: fixed;
-        max-width: 980px;
+       max-width: 980px;
     }
     .emptybox, .emptybox1, .emptybox2 {
         width: 0%;   
@@ -280,9 +279,9 @@ form{
     } 
     
     .wrapper  {
-        max-width: 600px;     
-        padding: 20px;
-        margin-top: 20px;
+        max-width: 95%;     
+        padding: 3%;
+        margin-top: 3%;
     }
     
     .name, .email, .message {
@@ -291,6 +290,9 @@ form{
         
     form {
         width: 90%;
+    }
+    .hangman, .rpg, .trivia, .rutgers, .rps {
+        width: 40%;
     }
 }
 
@@ -304,11 +306,11 @@ form{
     }
      
     body, .portfoliowrapper {
-        max-width: 600px;
+        max-width: 620px;
     } 
     
     .wrapper  {
-        max-width: 400px;     
+        max-width: 90%;     
         padding: 5%;
         margin-top: 5%;
     }
